--- a/index.html
+++ b/index.html
@@ -28,19 +28,20 @@
     </div>
 
     <div class="weather mt-5 text-center">
-        <h2 class="city" id="city">City</h2>
-        <div class="cityDisplay" id="cityDisplay"></div>
+        <h2 class="d-none city" id="city">City</h2>
+        <div class="cityDisplay hidden" id="cityDisplay"></div>
     </div>
     <div class="temp mt-5 text-center">
-        <h4 class="temp" id="temp">Temperature</h4>
+        <h4 class="temp d-none" id="temp">Temperature</h4>
         <div class="kelvin" id="kelvin"></div>
         <div class="fahrenheit" id="fahrenheit"></div>
         <div class="celsius" id="celsius"></div>
     </div>
-    <div class="currentCondition mt-5 text-center" id="currentCondition">
+    <div class="currentCondition d-none mt-5 text-center" id="currentCondition">
         <h5 class="currentCondition" id="currentCondition">Current Conditions</h5>
         <div class="conditions" id="conditions"></div>
     </div>
+    <div class="image" id="image"></div>
 
 
 
