--- a/index.html
+++ b/index.html
@@ -16,41 +16,42 @@
         <h1 class="text-center display-1 fw-bold mt-5" id="appTitle">Weather App</h1>
         <div class="container text-center mt-5">
             <div class="row">
-              <div class="col-3 offset-2">
-                <div class="form-outline">
-                    <input type="text" id="zipInput" class="form-control" placeholder="US Zipcode"/>
-                  </div>
-              </div>
-              <div class="col-6">
-                <button type="submit" class="btn btn-success" id="getWeather">Get Weather</button>
-              </div>
+                <div class="col-3 offset-2">
+                    <div class="form-outline">
+                        <input type="text" id="zipInput" class="form-control" pattern="[0-9] {5}"
+                            placeholder="US Zipcode" />
+                    </div>
+                </div>
+                <div class="col-6">
+                    <button type="submit" class="btn btn-success" id="getWeather">Get Weather</button>
+                </div>
+            </div>
         </div>
-    </div>
 
-    <div class="weather mt-5 text-center">
-        <h2 class="d-none city" id="city">City</h2>
-        <div class="cityDisplay hidden display-4 fw-bold" id="cityDisplay"></div>
-    </div>
-    <div class="row temp mt-5 text-center">
-        <h4 class="col text-center h4 temp d-none" id="temp">Temperature</h4>
-        <div class="col text-center h4 kelvin" id="kelvin"></div>
-        <div class="col text-center h4 fahrenheit" id="fahrenheit"></div>
-        <div class="col text-center h4 celsius" id="celsius"></div>
-    </div>
-    <div class="row mt-5">
-        <h4 class="col text-center h5 d-none" id="currentCondition">Current Conditions</h4>
-        <div class="col text-center h5 conditions" id="conditions"></div>
-    </div>
-    
-    <div class="image text-center mt-5" id="image"></div>
+        <div class="weather mt-5 text-center">
+            <h2 class="d-none city" id="city">City</h2>
+            <div class="cityDisplay hidden display-4 fw-bold" id="cityDisplay"></div>
+        </div>
+        <div class="row temp mt-5 text-center">
+            <h4 class="col text-center h4 temp d-none" id="temp">Temperature</h4>
+            <div class="col text-center h4 kelvin" id="kelvin"></div>
+            <div class="col text-center h4 fahrenheit" id="fahrenheit"></div>
+            <div class="col text-center h4 celsius" id="celsius"></div>
+        </div>
+        <div class="row mt-5">
+            <h4 class="col text-center h5 d-none" id="currentCondition">Current Conditions</h4>
+            <div class="col text-center h5 conditions" id="conditions"></div>
+        </div>
 
+        <div class="image text-center mt-5" id="image"></div>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-    <script src="./node_modules/axios/dist/axios.min.js"></script>
-    <script src="./js/main.js"></script>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
+        <script src="./node_modules/axios/dist/axios.min.js"></script>
+        <script src="./js/main.js"></script>
 
 </body>
 
