--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 
 <body>
     <div id="app">
-        <h1 class="text-center display-1 fw-bold mt-5" id="appTitle">Weather App</h1>
+        <h1 class="appTitle text-center display-1 fw-bold mt-5" id="appTitle">Weather App</h1>
         <div class="container text-center mt-5">
             <div class="row">
                 <div class="col-3 offset-2">
                     <div class="form-outline">
-                        <input type="text" id="zipInput" class="form-control" pattern="[0-9] {5}"
+                        <input type="text" id="zipInput" class="form-control" pattern="[0-9]{5}"
                             placeholder="US Zipcode" />
                     </div>
                 </div>
