update main.js, index.html, style.css

--- a/index.html
+++ b/index.html
@@ -27,6 +27,22 @@
                 </div>
             </div>
         </div>
+        <div class="modal fade mt-5 " id="modalError" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog mx-auto text-center">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title text-danger" id="modalMessage">No Weather Data</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  Weather data unavailable you better look out the window!!!
+                </div>
+                <div class="modal-footer">
+                </div>
+              </div>
+            </div>
+          </div>
+
 
         <div class="weather mt-5 text-center">
             <h2 class="d-none city" id="city">City</h2>
