--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         <h1 class="appTitle text-center display-1 fw-bold mt-5" id="appTitle">Weather App</h1>
         <div class="container text-center mt-5">
             <div class="row">
-                <div class="col-3 offset-2">
+                <div class="col-6 offset-2">
                     <div class="form-outline">
                         <input type="text" id="zipInput" class="form-control" pattern="[0-9]{5}"
                             placeholder="US Zipcode" />
                     </div>
                 </div>
-                <div class="col-6">
-                    <button type="submit" class="btn btn-success" id="getWeather">Get Weather</button>
+                <div class="col-3">
+                    <button type="submit" class="btn btn-success" id="getWeather">Get</button>
                 </div>
             </div>
         </div>
