--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 </div>
             </div>
         </div>
+        <div class="card">
         <div class="modal fade mt-5 " id="modalError" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog mx-auto text-center">
               <div class="modal-content">
@@ -42,8 +43,6 @@
               </div>
             </div>
           </div>
-
-
         <div class="weather mt-5 text-center">
             <h2 class="d-none city" id="city">City</h2>
             <div class="cityDisplay hidden display-4 fw-bold" id="cityDisplay"></div>
@@ -60,6 +59,7 @@
         </div>
 
         <div class="image text-center mt-5" id="image"></div>
+    </div>
 
 
 
